--- a/StoredProcTARge23/appsettings.json
+++ b/StoredProcTARge23/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "server=DESKTOP-FSFG20J;database=StoredProcTARge23;Trusted_Connection=true;MultipleActiveResultSets=true;"
+        "DefaultConnection": "server=DESKTOP-FSFG20J;database=StoredProcTARge23;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true"
     },
     "Logging": {
         "LogLevel": {
